--- a/style/head/head.css
+++ b/style/head/head.css
@@ -4,15 +4,84 @@
 #head{
     position: fixed;
     top:0px;
-    height: 107px;
+    height: 50px;
     width: 100%;
 }
 #head .head_container{
-    height: 90px;
-    width: 100%;
-    background-color: rgba(24,24,24,.8);
+    height: 45px;
+    background-color: rgba(24,24,24,.6);
 }
-#head .head .head_content{
+#head .head_content{
     width: 1000px;
     margin: 0px auto;
+}
+
+.head_content .logo{
+    float: left;
+    width: 100px;
+    height: 50px;
+    background-color: #e72026;
+    background-image:url('../../images/logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: contain;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+    -moz-background-color: #e72026;
+
+    -ms-background-size: contain;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+    -ms-background-color: #e72026;
+
+    -webkit-background-size: contain;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+    -webkit-background-color: #e72026;
+
+    -o-background-size: contain;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+    -o-background-color: #e72026;
+}
+
+.head_content .menu{
+    float: left;
+    height: 45px;
+    line-height: 45px;
+    width: 900px;
+    text-align: right;
+    font-size: 16px;
+}
+
+.head_content .menu span{
+    color:#fff;
+    font-size: 14px;
+    display: inline-block;
+    margin: 0px 25px;
+    cursor: pointer;
+}
+
+.head_content .menu span:hover{
+    color:#e72026;
+}
+
+.head_content .menu .active{
+    display: inline-block;
+    color:#e72026;
+    border-bottom: 3px solid #eee;
+}
+
+.head_content .menu span:hover::after{
+    content: "";
+    display: block;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 0px;
+    margin-bottom: -3px;
+    border-bottom: 3px solid rgba(250,248,225,.2);
 }
