--- a/style/content.css
+++ b/style/content.css
@@ -3,6 +3,7 @@
     background-color: #202020;
 }
 
+/*首页样式*/
 #content .index{
     width: 100%;
     padding-top: 120px;
@@ -104,3 +105,112 @@
     -o-background-repeat: no-repeat;
     -o-background-position: center center;
 }
+
+/*了解外星人样式*/
+
+#content .about{
+    width: 100%;
+    height: 500px;
+
+    background-image:url('../images/big_bg/about.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: cover;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: cover;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: cover;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: cover;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
+#content .about .about_container{
+    width: 1000px;
+    height: 500px;
+    margin: auto;
+}
+
+#content .about .about_container .about_layout{
+    height: 500px;
+    padding: 80px 20px;
+}
+
+#content .about .about_container .about_layout .about_layout_left{
+    float: left;
+    width: 160px;
+    height: 340px;
+    background-color: rgba(255,255,255,.5);
+}
+
+#content .about .about_container .about_layout .about_layout_right{
+    float: left;
+    width: 700px;
+    height: 340px;
+    background-color: rgba(24,24,24,.8);
+    padding: 10px 20px;
+    color: #ddd;
+}
+
+#content .about .about_container .about_layout .about_layout_right .about_item_about_us{
+    height: 40px;
+    background-image:url('../images/about/about_us.png');
+    background-size: auto 16px;
+    background-repeat: no-repeat;
+    background-position: left;
+
+    -moz-background-size: auto 16px;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: left;
+
+    -ms-background-size: auto 16px;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: left;
+
+    -webkit-background-size: auto 16px;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: left;
+
+    -o-background-size: auto 16px;
+    -o-background-repeat: no-repeat;
+    -o-background-position: left;
+}
+
+#content .about .about_container .about_title{
+    position: relative;
+    z-index: 10;
+    top:-400px;
+    width: 180px;
+    height: 70px;
+    background-color: #e72026;
+
+    background-image:url('../images/about/about_title.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: contain;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: contain;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: contain;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: contain;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
+
