--- a/style/admin/content.css
+++ b/style/admin/content.css
@@ -337,3 +337,32 @@
 .windows_title{
     background-color: #f8f8f8;
 }
+
+.innerContent{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.innerInfo{
+    position: relative;
+    height: 30px;
+    text-align: right;
+    top:-35px;
+}
+.innerItem{
+    position: relative;
+    border-radius: 2px;
+    background-color: rgba(0,0,0,.7);
+    color: #fff;
+    padding: 5px 10px;
+    margin-left: 1px;
+    font-size: 14px;
+    top:-100%;
+    cursor: pointer;
+}
+.innerItem:hover{
+    background-color: rgba(0,0,0,.8);
+}
+.innerActive{
+    color: #ffc602;
+}
