--- a/style/admin/product.css
+++ b/style/admin/product.css
@@ -74,6 +74,8 @@
     float: left;
     margin-right: 10px;
     width: 150px;
+    height: 100px;
+    line-height: 100px;
     border: 1px solid #97c4f2;
     text-align: center;
     font-size: 20px;
