--- a/style/admin/news.css
+++ b/style/admin/news.css
@@ -331,3 +331,39 @@
     height: 25px;
     margin-top: 75px;
 }
+.video_bg{
+    margin-left: 5px;
+    width: 160px;
+    height: 100px;
+    border: 1px solid #97c4f2;
+}
+.video_bg:hover{
+    border: 1px solid #53a4f6;
+}
+.video_info{
+    width: 100%;
+    height: 100%;
+    line-height: 98px;
+    text-align: center;
+    font-size: 25px;
+    color: #ccc;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.video_text{
+    position: absolute;
+    top: 10px;
+    left: 0px;
+    width: 100%;
+    text-align: center;
+    color: #00a0e9;
+    word-break: break-all;
+}
+.file_video_url{
+    width: 160px;
+    height: 100px;
+    position: absolute;
+    top:0px;
+    left: 0px;
+}
