--- a/style/content.css
+++ b/style/content.css
@@ -8,7 +8,6 @@
     width: 100%;
     padding-top: 120px;
 
-    background-image:url('../images/big_bg/index.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -33,7 +32,7 @@
 #content .index .product_logo{
     margin: 0px auto 300px auto;
     width: 1000px;
-    height: 100px;
+    height: 150px;
 
     background-image:url('../images/index/product_logo.png');
 
@@ -63,13 +62,13 @@
 }
 #content .index .product_text_left{
     width: 50%;
-    height: 90px;
-    background-color: rgba(24,24,24,1);
+    height: 120px;
+    background-color: rgba(34,34,34,1);
     float: left;
 }
 #content .index .product_text_right{
     width: 50%;
-    height: 80px;
+    height: 110px;
     background-color: rgba(255,255,255,.2);
     float: left;
     margin-top: 10px;
@@ -80,7 +79,7 @@
     top: 0px;
     z-index: 10;
     width: 1000px;
-    height: 90px;
+    height: 120px;
     margin: auto;
 
     background-image:url('../images/index/product_content.png');
@@ -112,7 +111,6 @@
     width: 100%;
     height: 500px;
 
-    background-image:url('../images/big_bg/about.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -241,13 +239,33 @@
     font-size: 12px;
     line-height: 2.5;
     text-indent: 24px;
+    height: 266px;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    -moz-background-size: cover;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: cover;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: cover;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: cover;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
 }
 
 #content .product{
     width: 100%;
     height: 500px;
 
-    background-image:url('../images/big_bg/product.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -279,7 +297,6 @@
     height: 160px;
     width: 100%;
 
-    background-image:url('../images/index/product_title.png');
     background-size: auto 30px;
     background-repeat: no-repeat;
     background-position: left 90px;
@@ -311,14 +328,18 @@
     min-height: 180px;
     margin: 0 5px;
 }
-#content .product .product_cate .product_XPEL{
+#content .product .product_XPEL{
     border: 1px solid #edaa04;
 }
-#content .product .product_cate .product_3M{
+#content .product .product_3M{
     border: 1px solid #bb1815;
 }
-#content .product .product_cate .product_PWF{
+#content .product .product_PWF{
     border: 1px solid #156daf;
+}
+
+#content .product .product_OVIIO{
+    border: 1px solid #23ade5;
 }
 
 #content .product .product_cate_logo{
@@ -340,6 +361,10 @@
 }
 #content .product .content_PWF{
     background-color: #156daf;
+}
+
+#content .product .content_OVIIO{
+    background-color: #23ade5;
 }
 
 #content .product .content_title{
@@ -389,7 +414,6 @@
     width: 100%;
     height: 600px;
 
-    background-image:url('../images/big_bg/link.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -520,7 +544,6 @@
     display: inline-block;
     width: 80px;
     height: 120px;
-    margin-right: 40px;
 }
 
 #content .link .link_container .link_content_QRCode_img{
@@ -529,7 +552,7 @@
 }
 
 #content .link .link_container .weixin_friends{
-    background-image:url('../images/about/qrcode_friends.jpg');
+
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -551,7 +574,7 @@
     -o-background-position: center center;
 }
 #content .link .link_container .weixin_subscribe{
-    background-image:url('../images/about/qrcode_subscribe.jpg');
+
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -580,7 +603,27 @@
     font-size: 12px;
 }
 
+.cate_logo{
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
 
+    -moz-background-size: 50%;
+    -moz-background-repeat: no-repeat;
+    -moz-background-position: center center;
+
+    -ms-background-size: 50%;
+    -ms-background-repeat: no-repeat;
+    -ms-background-position: center center;
+
+    -webkit-background-size: 50%;
+    -webkit-background-repeat: no-repeat;
+    -webkit-background-position: center center;
+
+    -o-background-size: 50%;
+    -o-background-repeat: no-repeat;
+    -o-background-position: center center;
+}
 
 .logo_XPEL{
     background-image:url('../images/index/logo_XPEL.png');
@@ -650,77 +693,7 @@
     -o-background-repeat: no-repeat;
     -o-background-position: center center;
 }
-
-.small_XPEL{
-    background-image:url('../images/index/logo_XPEL.png');
-    background-size: auto 30%;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    -moz-background-size: auto 30%;
-    -moz-background-repeat: no-repeat;
-    -moz-background-position: center center;
-
-    -ms-background-size: auto 30%;
-    -ms-background-repeat: no-repeat;
-    -ms-background-position: center center;
-
-    -webkit-background-size: auto 30%;
-    -webkit-background-repeat: no-repeat;
-    -webkit-background-position: center center;
-
-    -o-background-size: auto 30%;
-    -o-background-repeat: no-repeat;
-    -o-background-position: center center;
-}
-
-.small_3M{
-    background-image:url('../images/index/logo_3M.png');
-    background-size: auto 30%;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    -moz-background-size: auto 30%;
-    -moz-background-repeat: no-repeat;
-    -moz-background-position: center center;
-
-    -ms-background-size: auto 30%;
-    -ms-background-repeat: no-repeat;
-    -ms-background-position: center center;
-
-    -webkit-background-size: auto 30%;
-    -webkit-background-repeat: no-repeat;
-    -webkit-background-position: center center;
-
-    -o-background-size: auto 30%;
-    -o-background-repeat: no-repeat;
-    -o-background-position: center center;
-}
-
-.small_PWF{
-    background-image:url('../images/index/logo_PWF.png');
-    background-size: auto 30%;
-    background-repeat: no-repeat;
-    background-position: center center;
-
-    -moz-background-size: auto 30%;
-    -moz-background-repeat: no-repeat;
-    -moz-background-position: center center;
-
-    -ms-background-size: auto 30%;
-    -ms-background-repeat: no-repeat;
-    -ms-background-position: center center;
-
-    -webkit-background-size: auto 30%;
-    -webkit-background-repeat: no-repeat;
-    -webkit-background-position: center center;
-
-    -o-background-size: auto 30%;
-    -o-background-repeat: no-repeat;
-    -o-background-position: center center;
-}
-.small_ETPD{
-    background-image:url('../images/index/logo_ETPD.png');
+.small_Logo{
     background-size: auto 30%;
     background-repeat: no-repeat;
     background-position: center center;
