--- a/style/news/news.css
+++ b/style/news/news.css
@@ -35,9 +35,10 @@
     padding: 0px 10px;
     min-height: 50px;
 }
-.pic{
+.pic,.video{
     padding: 10px 0px;
 }
+
 .bg_color_2b{
     background-color: #2b2b2b;
     color: #ddd;
@@ -147,4 +148,24 @@
     border: 2px solid #fff;
     border-radius: 50%;
     text-align: center;
+    cursor: pointer;
+}
+.small_play_class{
+    width: 100%;
+    height: 100%;
+    line-height: 70px;
+    background-color: rgba(0,0,0,.2);
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+}
+.small_play_circle{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
 }
